--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,4 +9,23 @@
 
 body {
     background-color: #b3e6f4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 62.5%;
+}
+
+h1 {
+    padding-top: 100px;
+    font-size: 5rem;
+}
+
+
+.game-area {
+    background-color: white;
+    margin: 0 auto;
+    width: 70%;
+    height: 60vh;
+
 }
