--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,11 +27,14 @@ h1 {
     margin: 0 auto;
     width: 70%;
     height: 60vh;
+    border-radius: 12px;
 }
 
 .controls-area {
-  width: 60%;
+  width: 70%;
   margin: 30px auto;
+  display: flex;
+  justify-content: center;
 }
 
 .scores {
@@ -43,14 +46,13 @@ h1 {
 /* buttons */
 
 .btn {
-    width: 220px;
-    height: 60px;
+    height: 10rem;
+    width: 10rem;
     font-family: sans-serif;
     text-transform: uppercase;
     letter-spacing: 1.2px;
     color: black;
+    border-radius: 100%;
+    gap: 10px;
 }
 
-.btn:focus {
-    outline: none;
-}
