--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
 h1 {
     padding-top: 100px;
     font-size: 5rem;
+    margin-bottom: 10px;
 }
 
 
@@ -28,9 +29,9 @@ h1 {
     width: 70%;
     height: 60vh;
     border-radius: 12px;
-    box-shadow: 10px 10px 86px 51px rgba(0,0,0,0.75);
--webkit-box-shadow: 10px 10px 86px 51px rgba(0,0,0,0.75);
--moz-box-shadow: 10px 10px 86px 51px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 86px 51px #1c558abf;
+    -webkit-box-shadow: 10px 10px 86px 51px rgba(28,85,138,0.75);
+    -moz-box-shadow: 10px 10px 86px 51px rgba(28,85,138,0.75);
 }
 
 .controls-area {
@@ -43,9 +44,9 @@ h1 {
 #results {
     font-size: 1.6rem;
     text-align: center;
-    border-style: double;
-    border-color: #b3daf4;
-    border-width: 30px;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 /*score area */
