--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,10 +61,10 @@ h1 {
 
 .btn {
     height: 12rem;
-    width: 12rem;
+    width: 20rem;
     font-family: 'orbitron', sans-serif;
     color: black;
-    border-radius: 100%;
+    border-radius: 50%;
     border-style: double;
     border-width: 5px;
 }
@@ -81,11 +81,12 @@ h1 {
     background-size: contain;
     margin: 10px;
     border-color: yellow;
+    overflow: hidden;
 }
 
 #scissors {
     background: url('../images/scissors.svg') no-repeat center center;
-    background-size: cover;
+    background-size: contain;
     margin: 10px;
     border-color: red;
 }
@@ -103,3 +104,34 @@ h1 {
     margin: 10px;
     border-color: blue;
 }
+
+/* media queries */
+
+@media (max-width: 500px) {
+    h1 {
+        font-size: 2.2rem;
+        text-align: center;
+        padding-bottom: 50px;
+    }
+
+    .game-area {
+        width: 95%;
+        height: 70vh;
+    }
+
+    .controls-area {
+       width: 100%;
+    }
+
+    .btn {
+      width: 100%;
+    }
+
+    #results {
+        font-size: 1.55rem;
+        text-align: center;
+        margin-bottom: 10px;
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+  }
