--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ h1 {
 
 @media (max-width: 500px) {
     h1 {
-        font-size: 2.2rem;
+        font-size: 2.5rem;
         text-align: center;
         padding-bottom: 50px;
     }
@@ -130,8 +130,14 @@ h1 {
     #results {
         font-size: 1.55rem;
         text-align: center;
-        margin-bottom: 10px;
         margin-left: 100px;
         margin-right: 100px;
+    }
+
+    .scores {
+        font-size: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
   }
