added media query specifically for iphone 5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,3 +174,11 @@ h1 {
      }
 
   }
+
+  @media only screen and (min-device-width: 320px) and (max-device-width: 568px) 
+and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40/71)
+{
+   #results {
+    font-size: 1rem;
+   }
+}
