adding stylin to modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,28 @@ h1 {
     margin-bottom: 10px;
 }
 
+/* modal */
+
+.modal {
+    display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.4rem;
+  width: 450px;
+  padding: 1.3rem;
+  min-height: 250px;
+  position: absolute;
+  top: 20%;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+}
+
+.modal .flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 .game-area {
     background-color: white;
