--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,18 @@ h1 {
     border-radius: 50%;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0, 5);
+    backdrop-filter: blur(3px);
+    z-index: 1;
+}
 /* game area */
 
 .game-area {
