--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,18 +25,18 @@ h1 {
 /* modal */
 
 .modal {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 0.4rem;
-  width: 450px;
-  padding: 1.3rem;
-  min-height: 250px;
-  position: absolute;
-  top: 20%;
-  background-color: white;
-  border: 1px solid #ddd;
-  border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.4rem;
+    width: 450px;
+    padding: 1.3rem;
+    min-height: 250px;
+    position: absolute;
+    top: 20%;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 15px;
 }
 
 .modal .flex {
@@ -64,12 +64,11 @@ h1 {
     color: white;
     border-radius: 5px;
     text-align: center;
-    font-size: 1em;
+    font-size: 2em;
 }
 
 .button-open {
-    position: absolute;
-    bottom: 150px;
+   margin-bottom: 35px;
 }
 
 .button-close {
@@ -79,23 +78,6 @@ h1 {
     border-radius: 50%;
 }
 
-.overlay {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0, 5);
-    backdrop-filter: blur(3px);
-    z-index: 1;
-}
-
-.overlay {
-    z-index: 2;
-}
-
 .hidden {
     display: none;
 }
@@ -103,6 +85,7 @@ h1 {
 #rules {
     text-align: center;
 }
+
 /* game area */
 
 .game-area {
