added styling to the about page form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,13 @@ h1 {
     margin-bottom: 20px;
 }
 
+.about-area h2 {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: rgb(62, 21, 212);
+}
+
 #home-btn {
     margin-bottom: 40px;
 }
@@ -212,6 +219,52 @@ h1 {
     box-shadow: 10px 10px 86px 51px #1c558abf;
     -webkit-box-shadow: 10px 10px 86px 51px rgba(28,85,138,0.75);
     -moz-box-shadow: 10px 10px 86px 51px rgba(28,85,138,0.75);
+}
+
+form label {
+    display: block;
+    margin-bottom: 10px;
+    margin-left: 50px;
+    margin-top: 30px;
+}
+
+form input, form textarea {
+    display: block;
+    width: 90%;
+    margin-left: 50px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    border: thin solid #b3e6f4;
+}
+
+form select {
+    display: block;
+    width: 90%;
+    margin-left: 50px;
+    font-size: 16px;
+    border: thin solid #b3e6f4;
+    background-color: white;
+    color: #555;
+}
+
+form input:focus,
+form select:focus,
+form textarea {
+    outline: none;
+}
+
+.mailing-list span {
+   margin-left: 645px;
+   margin-bottom: 25px;
+}
+
+#mailing-list-qs {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#submit-btn {
+    margin-top: 20px;
 }
 
 /* media queries */
