--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ h1 {
 }
 
 .about-area h2 {
-    margin-top: 20px;
+    margin-top: 0%;
     text-align: center;
     font-size: 1.5rem;
     color: rgb(62, 21, 212);
@@ -211,27 +211,25 @@ h1 {
 }
 
 .about-area {
-    background-color: white;
-    margin: 0 auto;
-    width: 70%;
-    height: 60vh;
-    border-radius: 12px;
-    box-shadow: 10px 10px 86px 51px #1c558abf;
-    -webkit-box-shadow: 10px 10px 86px 51px rgba(28,85,138,0.75);
-    -moz-box-shadow: 10px 10px 86px 51px rgba(28,85,138,0.75);
+    max-width: 400px;
+	margin: 0 auto 0 auto;
+	border:  thin solid #e4e4e4;
+	padding: 20px;
+	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    margin-bottom: 50px;
 }
 
 form label {
     display: block;
     margin-bottom: 10px;
-    margin-left: 50px;
+    margin-left: 5px;
     margin-top: 30px;
 }
 
 form input, form textarea {
     display: block;
-    width: 90%;
-    margin-left: 50px;
+    width: 100%;
+    padding: 10px;
     margin-bottom: 10px;
     font-size: 16px;
     border: thin solid #b3e6f4;
@@ -239,8 +237,8 @@ form input, form textarea {
 
 form select {
     display: block;
-    width: 90%;
-    margin-left: 50px;
+    width: 100%;
+    padding: 10px;
     font-size: 16px;
     border: thin solid #b3e6f4;
     background-color: white;
@@ -253,18 +251,40 @@ form textarea {
     outline: none;
 }
 
-.mailing-list span {
-   margin-left: 645px;
-   margin-bottom: 25px;
+form input::placeholder {
+    font-size: 16px;
 }
 
 #mailing-list-qs {
-    text-align: center;
     margin-bottom: 20px;
+    text-align: center;
 }
 
-#submit-btn {
-    margin-top: 20px;
+form button {
+    background: #32749a;
+	color: white;
+	border: none;	
+	padding: 15px;
+	width:  100%;
+	font-size: 16px;
+	margin-top: 20px;
+	cursor: pointer;
+}
+
+form button:active {
+    background-color: green;
+}
+
+.error {
+    color: #af0c0c;
+    background-color: #ffe0e0;
+    padding: 8px;
+    display: none;
+}
+
+.success {
+    margin-top: 30px;
+    color: green;
 }
 
 /* media queries */
