--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,6 +383,13 @@ footer {
        }
   }
 
+  @media (max-width: 2000px) {
+    #results {
+        margin-top: 0px;
+        font-size: 1rem;
+    }
+  }
+
  /* specfically for galaxy fold */
 @media(max-width: 320px){ 
     
